Database, Halloween Event
- Added Halloween Event plugin
- Make changes on the Database
- Added 2 differents database for premium and cracked versions when doing tests